--- a/api/.air.toml
+++ b/api/.air.toml
@@ -7,15 +7,15 @@ tmp_dir = "tmp"
 
 [build]
 # Array of commands to run before each build
-pre_cmd = ["echo 'hello air' > pre_cmd.txt"]
+# pre_cmd = ["echo 'hello air' > pre_cmd.txt"] # ibukiコメントアウト ---------------------------------
 # Just plain old shell command. You could use `make` as well.
 cmd = "go build -o ./tmp/main ."
 # Array of commands to run after ^C
-post_cmd = ["echo 'hello air' > post_cmd.txt"]
+# post_cmd = ["echo 'hello air' > post_cmd.txt"] # ibukiコメントアウト ---------------------------------
 # Binary file yields from `cmd`.
 bin = "tmp/main"
 # Customize binary, can setup environment variables when run your app.
-full_bin = "APP_ENV=dev APP_USER=air ./tmp/main"
+full_bin = "./tmp/main" # ibuki余分な記述を削除 ---------------------------------
 # Watch these filename extensions.
 include_ext = ["go", "tpl", "tmpl", "html"]
 # Ignore these filename extensions or directories.
@@ -50,8 +50,8 @@ kill_delay = 500 # nanosecond
 rerun = false
 # Delay after each executions
 rerun_delay = 500
-# Add additional arguments when running binary (bin/full_bin). Will run './tmp/main hello world'.
-args_bin = ["hello", "world"]
+# Add additional arguments when running binary
+args_bin = [] # ibuki余分な記述を削除 ---------------------------------
 
 [log]
 # Show log time
