todoの追加機能作成

--- a/.env
+++ b/.env
@@ -1,16 +1,17 @@
+# Docker ボリューム
 VOLUME=./.data
 
+# API
+PORT=9090
 
-# Postgre
-POSTGRE_DATABASE=todos
-POSTGRE_ROOT_PASSWORD=root
-POSTGRE_USER=todo_user
-POSTGRE_PASSWORD=todo_pass
-POSTGRE_PORT=5432
-POSTGRE_HOST=postgre
+POSTGRES_DATABASE=todos
+POSTGRES_USER=todo_user
+POSTGRES_PASSWORD=todo_pass
+POSTGRES_PORT=5432
+POSTGRES_HOST=postgres
 
 # Goose
 GOOSE_DRIVER=postgres
-GOOSE_DBSTRING=postgres://todo_user:todo_pass@postgre:5432/todos?sslmode=disable
+GOOSE_DBSTRING=postgres://todo_user:todo_pass@postgres:5432/todos?sslmode=disable
 GOOSE_MIGRATION_DIR=tools/postgres/migrations
 GOOSE_TABLE=goose_migrations
